--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -3,6 +3,7 @@ V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - ve
 
 
 \section{Chladná zbraň v reálném světě}
+\subsection{Stručný průlet historií}
 Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako lidstvo samo. Archelogické nálezy nasvědčují, že již vzdálený předek moderního člověka Australopithecus používal úderný předmět (pravděpodobně kus dřeva či kost ulovené antilopy) jako nástroj k lovu paviánů \cite{AustralopithecusWeapon}. Výhody, které mu to mohlo přinést, jsou zjevné: zatímco kořist měla možnosti obrany omezené tím, kam dosáhly její vlastní zuby a drápy, lovec si ji mohl držet v bezpečné vzdálenosti a vystavovat vlastní tělo o poznání menšímu nebezpečí odvety.
 
 V průběhu svého vývoje lidský rod zdokonaloval i své zbraně, což přineslo mnoho dalších implikací - ostrý kamenný hrot člověku umožnil zasazovat ránu spolehlivě, a hlubší, než by kdy umožnilo pouhé jeho tělo. Spolehlivost zbraně umožnila lepší koordinaci mezi lovci. Sofistikovaná koordinace člověku otevřela cestu k lovu větších a silnějších druhů zvěře. Nakonec se člověk propracoval na samý vrchol potravního řetězce a zbraň, nástroj lovu, sloužila stále více pro vzájemný boj mezi lidmi. 
@@ -12,10 +13,19 @@ Na druhé straně tu však byl běžný obyvatel, který nepatřil k pravidelné
 
 Mocenské soupeření států ústí ve zběsilý a nikdy nekončící závod ve vývoji účinnějších zbraní a metod jejich použití. V jednom okamžiku dominuje Blízkému východu vozataj, v následujícím jej poráží Makedonská falanga, nad ní předvede svou superioritu Římský systém manipulů, ten vzápětí Římané sami prohlašují za zastaralý, avšak o půl tisíciletí později stejně jejich říši rozvrací hordy Hunských jezdců... chladná zbraň, ať už v rukou jezdce či pěšího vojáka, zůstává po většinu dějin dominantním prvkem na bojišti, se střelnými zbraněmi hrajícími významnou podpůrnou roli. Až s rozmachem zbraní palných se tato dynamika obrací a velmi pozvolně se dobíráme k modernímu vojenství. V současné době se chladná zbraň považuje převážně za překonanou - uplatnění pro ní stále existuje např. v kontextu pořádkových složek, avšak i pro ty plní úlohu spíše doplňkovou. Mimo oficiální kruhy pořád hraje nezanedbatelnou roli, avšak to je především pro její triviální dostupnost v porovnání s palnou zbraní.
 
-Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných preservaci historie a kulturního odkazu. Mezi významné patří japonské umění Kendó ("cesta meče") vycházející ze samurajské tradice, či evropská komunita historického šermu, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní sportovní šerm, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén LARP\footnote{\ac{LARP}}, jehož jedna z podob - tzv. dřevárna - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, karimatkou měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
+Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění Kendó ("cesta meče") vycházející ze samurajské tradice, či evropská komunita historického šermu, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní sportovní šerm, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén LARP\footnote{\ac{LARP}}, jehož jedna z podob - tzv. dřevárna - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
 
-Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů se dá očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní napodobit jejich oblíbenou činnost z reálného světa, ale bez mnoha nepohodlí, jež by ji v reálném světě provázela.
+Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní jejich oblíbenou činnost napodobit, ale bez mnohých nepohodlí, jež ji provázejí v reálném světě.
 
+Očekávání, jež takový hráč může od hry mít, se však výrazně liší v závislosti na míře jeho zběhlosti se zbraní. Předveďme si pro ilustraci příklad volně vyházející z autorovy osobní zkušenosti:
+K poprvé zkusil bojovat v 10 letech, když mu kamarád půjčil svůj náhradní měkčený meč a pozval ho spolus s dalšíma kamarádama k sobě na zahradu, že "se pomlátíme a bude sranda". Jediné, co tehdy K svedl, bylo náhodně máchat mečem a čas od času něco trefit. Citelně nenulový čas mu trvalo, než si plně uvědomil, že se nesnaží trefit protivníkův meč, ale protivníka. 
+Jak K chodil na další bitvy, začal si trochu uvědomovat co dělá. Odnaučil se nepraktickému mávání mečem pro parádu okoukanému z akčních filmů, a naučil se sekat úsporně, způsobem, kdy nedá protivníkovi neodolatelnou příležitost v mezičase uskočit a probodnout ho. Také začal mít dostatečně rychlé reflexy, že v případě, kdy na něj letí očividný sek, ho zvládl vyblokovat, uskočit před ním, či ho ignorovat protože vidí, že na něj protivník nedosáhne.
+
+Jak chodíš na další bitvy a bavíš se s kamarádama, s postupem času přijdeš na to, jak s mečem máchat trochu efektivně - místo abys vteřinu zvedal ruce nad hlavu a pak praštil vší silou dolů, zatímco protivník dávno uskočil na stranu a probodl při tom tvůj totálně odhalenej hrudník, sekneš ho nejkratší cestou, pomůžeš si při tom pákou kterou ti dává obouruční držení, aby tvůj sek šel rychle a dostatečnou silou, že ho protivník ucítí. Taky začneš mít dost rychlý reflexy abys dokázal reagovat na očividný seky protivníka a vykrýt je, uskočit před nima nebo je ignorovat protože víš že na tebe nedosáhnou; a začneš sám zkoušet dělat fingovaný úderý, kterýma přiměješ protivníka aby přesunul meč do jedný blokovací polohy zatímco ty na poslední chvíli úder zastavíš a přetočíš na jiný místo, který protivník nechal nechráněný. Všimneš si jak těžký obecně je blokovat pořádně údery, co vedou na tvoje nohy a ruce, a začneš toho využívat proti ostatním. Později tě napadne, že přece za stovky let, co se šerm praktikuje, někdo musel přijít s metodikou jak tuhle zranitelnost kompenzovat. Začneš pátrat a přirozeně objevíš celou nezměrnou pláň šermířských učení. Začneš koukat na videa a články, které rozebírají středověké techniky, časem si třeba najdeš nějakou šermířskou školu, která přijímá začátečníky. Tam se naučíš, že jednou z nejvíc základních věcí je postoj a pohyb nohou - a jsou přesně vykoumané techniky, co zařídí, abys měl pod kontrolou své těžiště, nenechal se rozhodit když na tebe někdo dá berserkr-náběh, stihl uhnout když ti seká na nohy, byl schopnej se bleskově přiblížit a využít otevření, co se ti naskytlo, a tak. Cvičíš s dalšími lidmi co jsou stejně odhodlaní a zdokonalují se podobně rychle jako ty. Po dlouhých letech je z tebe ostřílený šermíř, co podvědomě dokáže číst pohyby protivníka než se stanou podle nejdrobnějších náznaků, sám se pohybuje úsporně aby protivníkovi dal takových náznaků co nejmíň a také aby maximálně šetřil energii, umí solidně používat všechny zbraně co jeho spolek má, ví na co si dát pozor a čeho využít když bojuje proti nim. A pak tě přepadne odvážná nálada, řekneš si že zajdeš na hromadnou bitvu, a najednou vidíš, jak ti tohle všechno je absolutně k ničemu když se na tebe rozběhne dvoumetrovej týpek v plný plátový s obouručním palcátem a do toho na tebe z boku pálí lučištníci. 
+
+
+
+> Omezíme se tady pro ilustraci na jedenapůlruční meč: Nejprve jseš naprostej začátečník, kterýmu kamarád půjčil svůj starej meč a pozval ho na bitvu že se pomlátíte. Jediný co umíš je prostě máchat na random s mečem. Nenulovej čas ti potrvá, než si důkladně vmlátíš do hlavy, že nehceš zabít protivníkův meč, ale protivníka. Taky máš tendence s mečem mávat pro parádu a tak prostě dělat hloupý machrovinky, cos okoukal z akčních filmů, který tě v praxi jenom zdržujou a otevíraj nepříteli pro ránu. 
 
 
 \section{Chladná zbraň ve videohrách}
