--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -9,7 +9,7 @@ Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako 
 V průběhu svého vývoje lidský rod zdokonaloval i své zbraně, což přineslo mnoho dalších implikací - ostrý kamenný hrot člověku umožnil zasazovat ránu spolehlivě, a hlubší, než by kdy umožnilo pouhé jeho tělo. Spolehlivost zbraně umožnila lepší koordinaci mezi lovci. Sofistikovaná koordinace člověku otevřela cestu k lovu větších a silnějších druhů zvěře. Nakonec se člověk propracoval na samý vrchol potravního řetězce a zbraň, nástroj lovu, sloužila stále více pro vzájemný boj mezi lidmi. 
 
 Zrod civilizací vznesl na zbraň nové požadavky. Vysoká koncentrace lidí na jednom místě vedla přirozeně ke specializaci profesí, mezi jinými i vojenské. Profesionální armáda čítající tisíce lidí umožňovala (a vyžadovala) do té doby nevídanou míru koordinace - ideálem v takové situaci se ukázalo disponovat širokou škálou zbraní vysoce specializovaných, chladných i střelných, jež mohly být použity ve vzájemné synergii, doplněné válečnými stroji a vhodně vycvičenými zvířaty\footnote{kůň jak známo hrál přední roli}. Profesionální voják měl čas a motivaci svůj typ zbraně pochopit do hloubky, stejně tak vysoce náročná si mohla dovolit být i její výroba a údržba, za níž nesli zodpovědnost rovněž profesionálové ve svém oboru. 
-Na druhé straně tu však byl běžný obyvatel, který nepatřil k pravidelnému vojenskému jádru, ale byla-li říše pod útokem, považovalo se za samozřejmost že pozvedne zbraň na její obranu. Zbraň pro takového člověka vyžadovala především jednoduchost - jak na výrobu, tak na údržbu a použití, zkrátka aby bylo možné v časové tísni krizové situace dostat co nejrychleji co nejvíce odvedenců do bojeschopného stavu a udržet je v něm.
+Na druhé straně tu však byl běžný obyvatel, který nepatřil k pravidelnému vojenskému jádru, ale byla-li říše pod útokem, považovalo se za samozřejmost, že pozvedne zbraň na její obranu. Zbraň pro takového člověka vyžadovala především jednoduchost - jak na výrobu, tak na údržbu a použití, zkrátka aby bylo možné v časové tísni krizové situace dostat co nejrychleji co nejvíce odvedenců do bojeschopného stavu a udržet je v něm.
 
 Mocenské soupeření států ústí ve zběsilý a nikdy nekončící závod ve vývoji účinnějších zbraní a metod jejich použití. V jednom okamžiku dominuje Blízkému východu vozataj, v následujícím jej poráží Makedonská falanga, nad ní předvede svou superioritu Římský systém manipulů, ten vzápětí Římané sami prohlašují za zastaralý, avšak o půl tisíciletí později stejně jejich říši rozvrací hordy Hunských jezdců... chladná zbraň, ať už v rukou jezdce či pěšího vojáka, zůstává po většinu dějin dominantním prvkem na bojišti, se střelnými zbraněmi hrajícími významnou podpůrnou roli. Až s rozmachem zbraní palných se tato dynamika obrací a velmi pozvolně se dobíráme k modernímu vojenství. V současné době se chladná zbraň považuje převážně za překonanou - uplatnění pro ní stále existuje např. v kontextu pořádkových složek, avšak i pro ty plní úlohu spíše doplňkovou. Mimo oficiální kruhy pořád hraje nezanedbatelnou roli, avšak to je především pro její triviální dostupnost v porovnání s palnou zbraní.
 
@@ -17,15 +17,20 @@ Tradice chladné zbraně však stále žije v civilních komunitách dedikovaný
 
 Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní jejich oblíbenou činnost napodobit, ale bez mnohých nepohodlí, jež ji provázejí v reálném světě.
 
+\subsection{Rozdílné stupně zkušenosti}
 Očekávání, jež takový hráč může od hry mít, se však výrazně liší v závislosti na míře jeho zběhlosti se zbraní. Předveďme si pro ilustraci příklad volně vyházející z autorovy osobní zkušenosti:
-K poprvé zkusil bojovat v 10 letech, když mu kamarád půjčil svůj náhradní měkčený meč a pozval ho spolus s dalšíma kamarádama k sobě na zahradu, že "se pomlátíme a bude sranda". Jediné, co tehdy K svedl, bylo náhodně máchat mečem a čas od času něco trefit. Citelně nenulový čas mu trvalo, než si plně uvědomil, že se nesnaží trefit protivníkův meč, ale protivníka. 
-Jak K chodil na další bitvy, začal si trochu uvědomovat co dělá. Odnaučil se nepraktickému mávání mečem pro parádu okoukanému z akčních filmů, a naučil se sekat úsporně, způsobem, kdy nedá protivníkovi neodolatelnou příležitost v mezičase uskočit a probodnout ho. Také začal mít dostatečně rychlé reflexy, že v případě, kdy na něj letí očividný sek, ho zvládl vyblokovat, uskočit před ním, či ho ignorovat protože vidí, že na něj protivník nedosáhne.
+K si poprvé osahal meč v 10 letech, když mu kamarád půjčil svůj náhradní a pozval ho spolus s dalšíma kamarádama k sobě na zahradu, že "se pomlátíme a bude sranda". Jediné, co tehdy K svedl, bylo náhodně máchat mečem a čas od času něco trefit. Citelně nenulový čas mu trvalo, než si plně uvědomil, že se nemá snažit trefit protivníkův meč, ale protivníka. 
 
-Jak chodíš na další bitvy a bavíš se s kamarádama, s postupem času přijdeš na to, jak s mečem máchat trochu efektivně - místo abys vteřinu zvedal ruce nad hlavu a pak praštil vší silou dolů, zatímco protivník dávno uskočil na stranu a probodl při tom tvůj totálně odhalenej hrudník, sekneš ho nejkratší cestou, pomůžeš si při tom pákou kterou ti dává obouruční držení, aby tvůj sek šel rychle a dostatečnou silou, že ho protivník ucítí. Taky začneš mít dost rychlý reflexy abys dokázal reagovat na očividný seky protivníka a vykrýt je, uskočit před nima nebo je ignorovat protože víš že na tebe nedosáhnou; a začneš sám zkoušet dělat fingovaný úderý, kterýma přiměješ protivníka aby přesunul meč do jedný blokovací polohy zatímco ty na poslední chvíli úder zastavíš a přetočíš na jiný místo, který protivník nechal nechráněný. Všimneš si jak těžký obecně je blokovat pořádně údery, co vedou na tvoje nohy a ruce, a začneš toho využívat proti ostatním. Později tě napadne, že přece za stovky let, co se šerm praktikuje, někdo musel přijít s metodikou jak tuhle zranitelnost kompenzovat. Začneš pátrat a přirozeně objevíš celou nezměrnou pláň šermířských učení. Začneš koukat na videa a články, které rozebírají středověké techniky, časem si třeba najdeš nějakou šermířskou školu, která přijímá začátečníky. Tam se naučíš, že jednou z nejvíc základních věcí je postoj a pohyb nohou - a jsou přesně vykoumané techniky, co zařídí, abys měl pod kontrolou své těžiště, nenechal se rozhodit když na tebe někdo dá berserkr-náběh, stihl uhnout když ti seká na nohy, byl schopnej se bleskově přiblížit a využít otevření, co se ti naskytlo, a tak. Cvičíš s dalšími lidmi co jsou stejně odhodlaní a zdokonalují se podobně rychle jako ty. Po dlouhých letech je z tebe ostřílený šermíř, co podvědomě dokáže číst pohyby protivníka než se stanou podle nejdrobnějších náznaků, sám se pohybuje úsporně aby protivníkovi dal takových náznaků co nejmíň a také aby maximálně šetřil energii, umí solidně používat všechny zbraně co jeho spolek má, ví na co si dát pozor a čeho využít když bojuje proti nim. A pak tě přepadne odvážná nálada, řekneš si že zajdeš na hromadnou bitvu, a najednou vidíš, jak ti tohle všechno je absolutně k ničemu když se na tebe rozběhne dvoumetrovej týpek v plný plátový s obouručním palcátem a do toho na tebe z boku pálí lučištníci. 
+Jak K chodil na další bitvy, začal si trochu uvědomovat, co dělá. Odvykl nepraktickému mávání mečem pro parádu okoukanému z akčních filmů a naučil se sekat úsporně - způsobem, kdy nedá protivníkovi neodolatelnou příležitost v mezičase uskočit a probodnout ho. Také začal mít dostatečně rychlé reflexy, že v případě, kdy na něj letěl očividný sek, ho zvládl vyblokovat, uskočit před ním, či ho ignorovat protože viděl, že na něj protivník nedosáhne. Začal se sám pokoušet o fingované údery, které na poslední chvíli zastavil a přetočil na jiné místo, které protivník nechal nechráněné, jak se pokusil domnělý úder vyblokovat. Všiml si, že je pro něj relativně těžší blokovat údery vedoucí na jeho nohy, a začal tento objev využívat proti ostatním.
+
+
+
+>Později tě napadne, že přece za stovky let, co se šerm praktikuje, někdo musel přijít s metodikou jak tuhle zranitelnost kompenzovat. Začneš pátrat a přirozeně objevíš celou nezměrnou pláň šermířských učení. Začneš koukat na videa a články, které rozebírají středověké techniky, časem si třeba najdeš nějakou šermířskou školu, která přijímá začátečníky. Tam se naučíš, že jednou z nejvíc základních věcí je postoj a pohyb nohou - a jsou přesně vykoumané techniky, co zařídí, abys měl pod kontrolou své těžiště, nenechal se rozhodit když na tebe někdo dá berserkr-náběh, stihl uhnout když ti seká na nohy, byl schopnej se bleskově přiblížit a využít otevření, co se ti naskytlo, a tak. Cvičíš s dalšími lidmi co jsou stejně odhodlaní a zdokonalují se podobně rychle jako ty. Po dlouhých letech je z tebe ostřílený šermíř, co podvědomě dokáže číst pohyby protivníka než se stanou podle nejdrobnějších náznaků, sám se pohybuje úsporně aby protivníkovi dal takových náznaků co nejmíň a také aby maximálně šetřil energii, umí solidně používat všechny zbraně co jeho spolek má, ví na co si dát pozor a čeho využít když bojuje proti nim. A pak tě přepadne odvážná nálada, řekneš si že zajdeš na hromadnou bitvu, a najednou vidíš, jak ti tohle všechno je absolutně k ničemu když se na tebe rozběhne dvoumetrovej týpek v plný plátový s obouručním palcátem a do toho na tebe z boku pálí lučištníci. 
 
 
 
 > Omezíme se tady pro ilustraci na jedenapůlruční meč: Nejprve jseš naprostej začátečník, kterýmu kamarád půjčil svůj starej meč a pozval ho na bitvu že se pomlátíte. Jediný co umíš je prostě máchat na random s mečem. Nenulovej čas ti potrvá, než si důkladně vmlátíš do hlavy, že nehceš zabít protivníkův meč, ale protivníka. Taky máš tendence s mečem mávat pro parádu a tak prostě dělat hloupý machrovinky, cos okoukal z akčních filmů, který tě v praxi jenom zdržujou a otevíraj nepříteli pro ránu. 
+Jak chodíš na další bitvy a bavíš se s kamarádama, s postupem času přijdeš na to, jak s mečem máchat trochu efektivně - místo abys vteřinu zvedal ruce nad hlavu a pak praštil vší silou dolů, zatímco protivník dávno uskočil na stranu a probodl při tom tvůj totálně odhalenej hrudník, sekneš ho nejkratší cestou, pomůžeš si při tom pákou kterou ti dává obouruční držení, aby tvůj sek šel rychle a dostatečnou silou, že ho protivník ucítí. Taky začneš mít dost rychlý reflexy abys dokázal reagovat na očividný seky protivníka a vykrýt je, uskočit před nima nebo je ignorovat protože víš že na tebe nedosáhnou; a začneš sám zkoušet dělat fingovaný úderý, kterýma přiměješ protivníka aby přesunul meč do jedný blokovací polohy zatímco ty na poslední chvíli úder zastavíš a přetočíš na jiný místo, který protivník nechal nechráněný. Všimneš si jak těžký obecně je blokovat pořádně údery, co vedou na tvoje nohy a ruce, a začneš toho využívat proti ostatním. 
 
 
 \section{Chladná zbraň ve videohrách}
