--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -19,10 +19,12 @@ Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze oček
 
 \subsection{Rozdílné stupně zkušenosti}
 Očekávání, jež takový hráč může od hry mít, se však výrazně liší v závislosti na míře jeho zběhlosti se zbraní. Předveďme si pro ilustraci příklad volně vyházející z autorovy osobní zkušenosti:
-K si poprvé osahal meč v 10 letech, když mu kamarád půjčil svůj náhradní a pozval ho spolus s dalšíma kamarádama k sobě na zahradu, že "se pomlátíme a bude sranda". Jediné, co tehdy K svedl, bylo náhodně máchat mečem a čas od času něco trefit. Citelně nenulový čas mu trvalo, než si plně uvědomil, že se nemá snažit trefit protivníkův meč, ale protivníka. 
 
-Jak K chodil na další bitvy, začal si trochu uvědomovat, co dělá. Odvykl nepraktickému mávání mečem pro parádu okoukanému z akčních filmů a naučil se sekat úsporně - způsobem, kdy nedá protivníkovi neodolatelnou příležitost v mezičase uskočit a probodnout ho. Také začal mít dostatečně rychlé reflexy, že v případě, kdy na něj letěl očividný sek, ho zvládl vyblokovat, uskočit před ním, či ho ignorovat protože viděl, že na něj protivník nedosáhne. Začal se sám pokoušet o fingované údery, které na poslední chvíli zastavil a přetočil na jiné místo, které protivník nechal nechráněné, jak se pokusil domnělý úder vyblokovat. Všiml si, že je pro něj relativně těžší blokovat údery vedoucí na jeho nohy, a začal tento objev využívat proti ostatním.
+K si poprvé osahal meč v 10 letech, když mu kamarád půjčil svůj náhradní a pozval ho spolu s dalšíma kamarádama k sobě na zahradu, že "se pomlátíme a bude sranda". Jediné, co tehdy K svedl, bylo náhodně máchat mečem a čas od času něco trefit. Citelně nenulový čas mu trvalo, než si plně uvědomil, že se nemá snažit trefit protivníkův meč, ale protivníka. 
 
+Jak K chodil na další bitvy, začal si trochu uvědomovat, co dělá. Odvykl nepraktickému mávání mečem pro parádu okoukanému z akčních filmů a naučil se sekat úsporně - způsobem, kdy nedá protivníkovi neodolatelnou příležitost v mezičase uskočit a probodnout ho. Také začal mít dostatečně rychlé reflexy, že v případě, kdy na něj letěl očividný sek, ho zvládl vyblokovat, uskočit před ním, či ho ignorovat protože viděl, že na něj protivník nedosáhne. Začal se sám pokoušet o fingované údery, které na poslední chvíli zastavil a přetočil na jiné místo, které protivník nechal nechráněné, jak se pokusil domnělý úder vyblokovat. Všiml si, že jeho nohy jsou zranitelné místo, které je se zohledněním dosahu jeho meče poměrně obtížné efektivně chránit, a začal tento objev využívat proti ostatním.
+
+Později se zamyslel
 
 
 >Později tě napadne, že přece za stovky let, co se šerm praktikuje, někdo musel přijít s metodikou jak tuhle zranitelnost kompenzovat. Začneš pátrat a přirozeně objevíš celou nezměrnou pláň šermířských učení. Začneš koukat na videa a články, které rozebírají středověké techniky, časem si třeba najdeš nějakou šermířskou školu, která přijímá začátečníky. Tam se naučíš, že jednou z nejvíc základních věcí je postoj a pohyb nohou - a jsou přesně vykoumané techniky, co zařídí, abys měl pod kontrolou své těžiště, nenechal se rozhodit když na tebe někdo dá berserkr-náběh, stihl uhnout když ti seká na nohy, byl schopnej se bleskově přiblížit a využít otevření, co se ti naskytlo, a tak. Cvičíš s dalšími lidmi co jsou stejně odhodlaní a zdokonalují se podobně rychle jako ty. Po dlouhých letech je z tebe ostřílený šermíř, co podvědomě dokáže číst pohyby protivníka než se stanou podle nejdrobnějších náznaků, sám se pohybuje úsporně aby protivníkovi dal takových náznaků co nejmíň a také aby maximálně šetřil energii, umí solidně používat všechny zbraně co jeho spolek má, ví na co si dát pozor a čeho využít když bojuje proti nim. A pak tě přepadne odvážná nálada, řekneš si že zajdeš na hromadnou bitvu, a najednou vidíš, jak ti tohle všechno je absolutně k ničemu když se na tebe rozběhne dvoumetrovej týpek v plný plátový s obouručním palcátem a do toho na tebe z boku pálí lučištníci. 
