--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -3,7 +3,8 @@ V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - ve
 
 
 \section{Chladná zbraň v reálném světě}
-\subsection{Stručný průlet historií}
+\subsection{Průlet historií}
+
 Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako lidstvo samo. Archelogické nálezy nasvědčují, že již vzdálený předek moderního člověka Australopithecus používal úderný předmět (pravděpodobně kus dřeva či kost ulovené antilopy) jako nástroj k lovu paviánů \cite{AustralopithecusWeapon}. Výhody, které mu to mohlo přinést, jsou zjevné: zatímco kořist měla možnosti obrany omezené tím, kam dosáhly její vlastní zuby a drápy, lovec si ji mohl držet v bezpečné vzdálenosti a vystavovat vlastní tělo o poznání menšímu nebezpečí odvety.
 
 V průběhu svého vývoje lidský rod zdokonaloval i své zbraně, což přineslo mnoho dalších implikací - ostrý kamenný hrot člověku umožnil zasazovat ránu spolehlivě, a hlubší, než by kdy umožnilo pouhé jeho tělo. Spolehlivost zbraně umožnila lepší koordinaci mezi lovci. Sofistikovaná koordinace člověku otevřela cestu k lovu větších a silnějších druhů zvěře. Nakonec se člověk propracoval na samý vrchol potravního řetězce a zbraň, nástroj lovu, sloužila stále více pro vzájemný boj mezi lidmi. 
@@ -15,28 +16,23 @@ Mocenské soupeření států ústí ve zběsilý a nikdy nekončící závod ve
 
 Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění Kendó ("cesta meče") vycházející ze samurajské tradice, či evropská komunita historického šermu, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní sportovní šerm, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén LARP\footnote{\ac{LARP}}, jehož jedna z podob - tzv. dřevárna - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
 
-Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní jejich oblíbenou činnost napodobit, ale bez mnohých nepohodlí, jež ji provázejí v reálném světě.
+Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní jejich oblíbenou činnost napodobit, ale bez mnohých nepohodlí, jež ji provázejí v reálném světě. Pro hráče, který s bojem v reálném světě žádnou zkušenost nemá, může zase videohra být cestou, jak tuto mezeru ve svých zkušenostech částečně zaplnit a získat například hlubší porozumění k historii.
 
-\subsection{Rozdílné stupně zkušenosti}
-Očekávání, jež takový hráč může od hry mít, se však výrazně liší v závislosti na míře jeho zběhlosti se zbraní. Předveďme si pro ilustraci příklad volně vyházející z autorovy osobní zkušenosti:
-
-K si poprvé osahal meč v 10 letech, když mu kamarád půjčil svůj náhradní a pozval ho spolu s dalšíma kamarádama k sobě na zahradu, že "se pomlátíme a bude sranda". Jediné, co tehdy K svedl, bylo náhodně máchat mečem a čas od času něco trefit. Citelně nenulový čas mu trvalo, než si plně uvědomil, že se nemá snažit trefit protivníkův meč, ale protivníka. 
-
-Jak K chodil na další bitvy, začal si trochu uvědomovat, co dělá. Odvykl nepraktickému mávání mečem pro parádu okoukanému z akčních filmů a naučil se sekat úsporně - způsobem, kdy nedá protivníkovi neodolatelnou příležitost v mezičase uskočit a probodnout ho. Také začal mít dostatečně rychlé reflexy, že v případě, kdy na něj letěl očividný sek, ho zvládl vyblokovat, uskočit před ním, či ho ignorovat protože viděl, že na něj protivník nedosáhne. Začal se sám pokoušet o fingované údery, které na poslední chvíli zastavil a přetočil na jiné místo, které protivník nechal nechráněné, jak se pokusil domnělý úder vyblokovat. Všiml si, že jeho nohy jsou zranitelné místo, které je se zohledněním dosahu jeho meče poměrně obtížné efektivně chránit, a začal tento objev využívat proti ostatním.
-
-Později se zamyslel
-
-
->Později tě napadne, že přece za stovky let, co se šerm praktikuje, někdo musel přijít s metodikou jak tuhle zranitelnost kompenzovat. Začneš pátrat a přirozeně objevíš celou nezměrnou pláň šermířských učení. Začneš koukat na videa a články, které rozebírají středověké techniky, časem si třeba najdeš nějakou šermířskou školu, která přijímá začátečníky. Tam se naučíš, že jednou z nejvíc základních věcí je postoj a pohyb nohou - a jsou přesně vykoumané techniky, co zařídí, abys měl pod kontrolou své těžiště, nenechal se rozhodit když na tebe někdo dá berserkr-náběh, stihl uhnout když ti seká na nohy, byl schopnej se bleskově přiblížit a využít otevření, co se ti naskytlo, a tak. Cvičíš s dalšími lidmi co jsou stejně odhodlaní a zdokonalují se podobně rychle jako ty. Po dlouhých letech je z tebe ostřílený šermíř, co podvědomě dokáže číst pohyby protivníka než se stanou podle nejdrobnějších náznaků, sám se pohybuje úsporně aby protivníkovi dal takových náznaků co nejmíň a také aby maximálně šetřil energii, umí solidně používat všechny zbraně co jeho spolek má, ví na co si dát pozor a čeho využít když bojuje proti nim. A pak tě přepadne odvážná nálada, řekneš si že zajdeš na hromadnou bitvu, a najednou vidíš, jak ti tohle všechno je absolutně k ničemu když se na tebe rozběhne dvoumetrovej týpek v plný plátový s obouručním palcátem a do toho na tebe z boku pálí lučištníci. 
+\subsection{Souboj dvou šermířů}
 
 
 
-> Omezíme se tady pro ilustraci na jedenapůlruční meč: Nejprve jseš naprostej začátečník, kterýmu kamarád půjčil svůj starej meč a pozval ho na bitvu že se pomlátíte. Jediný co umíš je prostě máchat na random s mečem. Nenulovej čas ti potrvá, než si důkladně vmlátíš do hlavy, že nehceš zabít protivníkův meč, ale protivníka. Taky máš tendence s mečem mávat pro parádu a tak prostě dělat hloupý machrovinky, cos okoukal z akčních filmů, který tě v praxi jenom zdržujou a otevíraj nepříteli pro ránu. 
-Jak chodíš na další bitvy a bavíš se s kamarádama, s postupem času přijdeš na to, jak s mečem máchat trochu efektivně - místo abys vteřinu zvedal ruce nad hlavu a pak praštil vší silou dolů, zatímco protivník dávno uskočil na stranu a probodl při tom tvůj totálně odhalenej hrudník, sekneš ho nejkratší cestou, pomůžeš si při tom pákou kterou ti dává obouruční držení, aby tvůj sek šel rychle a dostatečnou silou, že ho protivník ucítí. Taky začneš mít dost rychlý reflexy abys dokázal reagovat na očividný seky protivníka a vykrýt je, uskočit před nima nebo je ignorovat protože víš že na tebe nedosáhnou; a začneš sám zkoušet dělat fingovaný úderý, kterýma přiměješ protivníka aby přesunul meč do jedný blokovací polohy zatímco ty na poslední chvíli úder zastavíš a přetočíš na jiný místo, který protivník nechal nechráněný. Všimneš si jak těžký obecně je blokovat pořádně údery, co vedou na tvoje nohy a ruce, a začneš toho využívat proti ostatním. 
+\subsection{Hromadný boj a boj proti přesile}
 
 
 \section{Chladná zbraň ve videohrách}
-hdw
+Ve většině videoher je podoba boje oproti realitě silně stylizovaná, jak po vizuální stránce, tak z hlediska kontroly, která je hráči poskytnuta. 
+Ovládání se zpravidla dá popsat tak, že hráč stiskne tlačítko, a postava sama zaútočí způsobem, jakým uzná za vhodné. Výhody, které tento přístup přináší:
+\begin{itemize}
+    \item Uchopitelnost pro nového hráče
+    \item Uniformní rozhraní pro všechny typy zbraní
+    \item 
+\end{itemize}
 
 \subsection{Zaklínač 3 - vzorový příklad}
 q
