--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -1,5 +1,5 @@
 \chapter{Úvod do problematiky}
-V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - velmi stručně nastíníme jeho vývoj a metodiku v reálném světě, zkontrastujeme s jeho popkulturní reprezentací, a následně do hloubky rozebereme mechaniky, skrze které ho adaptuje svět videoher, a problémy, které při tom musí řešit.
+V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - velmi stručně nastíníme jeho vývoj a metodiku v reálném světě a následně do hloubky rozebereme mechaniky, skrze které ho adaptuje svět videoher, a problémy, které při tom musí řešit.
 
 
 \section{Chladná zbraň v reálném světě}
@@ -14,12 +14,31 @@ Na druhé straně tu však byl běžný obyvatel, který nepatřil k pravidelné
 
 Mocenské soupeření států ústí ve zběsilý a nikdy nekončící závod ve vývoji účinnějších zbraní a metod jejich použití. V jednom okamžiku dominuje Blízkému východu vozataj, v následujícím jej poráží Makedonská falanga, nad ní předvede svou superioritu Římský systém manipulů, ten vzápětí Římané sami prohlašují za zastaralý, avšak o půl tisíciletí později stejně jejich říši rozvrací hordy Hunských jezdců... chladná zbraň, ať už v rukou jezdce či pěšího vojáka, zůstává po většinu dějin dominantním prvkem na bojišti, se střelnými zbraněmi hrajícími významnou podpůrnou roli. Až s rozmachem zbraní palných se tato dynamika obrací a velmi pozvolně se dobíráme k modernímu vojenství. V současné době se chladná zbraň považuje převážně za překonanou - uplatnění pro ní stále existuje např. v kontextu pořádkových složek, avšak i pro ty plní úlohu spíše doplňkovou. Mimo oficiální kruhy pořád hraje nezanedbatelnou roli, avšak to je především pro její triviální dostupnost v porovnání s palnou zbraní.
 
-Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění Kendó ("cesta meče") vycházející ze samurajské tradice, či evropská komunita historického šermu, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní sportovní šerm, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén LARP\footnote{\ac{LARP}}, jehož jedna z podob - tzv. dřevárna - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
+Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění Kendó ("cesta meče") vycházející ze samurajské tradice, či evropská komunita historického šermu, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní sportovní šerm, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén LARP\footnote{\ac{LARP}}, jehož jedna z podob - tzv. "dřevárna" - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
 
 Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní jejich oblíbenou činnost napodobit, ale bez mnohých nepohodlí, jež ji provázejí v reálném světě. Pro hráče, který s bojem v reálném světě žádnou zkušenost nemá, může zase videohra být cestou, jak tuto mezeru ve svých zkušenostech částečně zaplnit a získat například hlubší porozumění k historii.
 
-\subsection{Souboj dvou šermířů}
+\subsection{Průběh boje}
+Nyní si představíme typický průběh boje vedeného s chladnými zbraněmi, a vypíchneme na něm znaky, které by videohra měla dokázat vystihnout, pokud se pokouší o realistický bojový systém.
+\bigbreak
 
+Cílem souboje je v nejjednodušším případě protivníka zabít, vážně zranit či ho jinak vyřadit z bojeschopného stavu, čehož může být dosaženo libovolnými prostředky. Není vyloučeno vítězství vyčerpáním protivníka či využití okolních předmětů a znalosti prostředí (např. lstivým vlákáním protivníka do bažiny).
+
+Tato absolutní svoboda však může být omezena morálními zásadami účastníků či předem dohodnutými pravidly souboje. Velmi zde záleží na okolnostech, při kterých k boji dochází:
+\begin{itemize}
+    \item Např. při obraně domácnosti před vetřelcem platí popis výše
+    \item Voják v bitvě koná v mezích, jež mu stanovuje vojenská disciplína a rozkazy velitele
+    \item Účastník turnaje přirozeně nesmí opustit vyhrazené bojiště či využívat pomoci z publika
+    \item Ve cvičném souboji si účastníci logicky dávají pozor, aby jeden druhého zbytečně nezabil či nezmrzačil
+    \item V duelu na obranu cti se účastníci mohli předem dohodnout, že nechtějí jeden druhého zabít, a např. bojovat "na první krev"
+\end{itemize}
+Mezi znaky zkušeného šermíře patří schopnost být si vědom těchto mantinelů, a v jejich rámci jednat kreativním a účinným způsobem.
+
+Extrémní případ těchto omezení vidíme v moderních šermířských komunitách. U těch najdeme velmi striktní pravidla a vysoké minimální nároky na bojovou výstroj s cílem zamezit jakýmkoliv vážným zraněním a ztrátám na životech, jelikož ty přirozeně nejsou cílem jejich snažení. 
+
+Avšak pokud nedochází k žádným reálným zraněním, jak lze určit, kdo vyhrál? Zjevnou cestou je například systém zásahových zón a počítání životů, které se bojovníkovi v závislosti na zasažené zóně odečítají. Takový systém však nezaručuje realistický dojem z boje. Mezi plody snah o realističtější zážitek patří např. v české LARPové scéně oblíbený šatrh\cite{Satrh}, založený na důvěře v účastníky, že podle způsobu, jakým byli zasaženi, odhadnou a zahrají realistickou reakci, či buhurt, kde zkrátka vítězí ten, kdo nepadne vyčerpáním. Je tedy vidět, že i komunity, jejichž nejvyšší prioritou při boji je záruka bezpečí, jsou ochotné vyvinout značnou snahu, aby byl zážitek z boje realistický.
+
+\subsection{Boj jeden na jednoho}
 
 
 \subsection{Hromadný boj a boj proti přesile}
@@ -31,7 +50,6 @@ Ovládání se zpravidla dá popsat tak, že hráč stiskne tlačítko, a postav
 \begin{itemize}
     \item Uchopitelnost pro nového hráče
     \item Uniformní rozhraní pro všechny typy zbraní
-    \item 
 \end{itemize}
 
 \subsection{Zaklínač 3 - vzorový příklad}
