--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -38,3 +38,11 @@
   year            = {1972},
   url             = {https://www.jstor.org/stable/1302940?seq=1},
 }
+
+@article{Satrh,
+  author          = {Tomáš "Vojcl" Vojáček},
+  journal         = {Larp.cz},
+  title           = {Odkud přišly a kam jdou tvrdší bitvy},
+  year            = {2012},
+  url             = {https://www.larp.cz/?q=cs/clanek/3545/odkud-prisly-a-kam-jdou-tvrdsi-bitvy},
+}
