--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -22,9 +22,9 @@ Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze oček
 Nyní si představíme typický průběh boje vedeného s chladnými zbraněmi, a vypíchneme na něm znaky, které by videohra měla dokázat vystihnout, pokud se pokouší o realistický bojový systém.
 \bigbreak
 
-Cílem souboje je v nejjednodušším případě protivníka zabít, vážně zranit či ho jinak vyřadit z bojeschopného stavu, čehož může být dosaženo libovolnými prostředky. Není vyloučeno vítězství vyčerpáním protivníka či využití okolních předmětů a znalosti prostředí (např. lstivým vlákáním protivníka do bažiny).
+Cílem souboje je v nejjednodušším případě protivníka zabít, vážně zranit či ho jinak vyřadit z bojeschopného stavu, čehož může být dosaženo libovolnými prostředky, a ideálně zabránit, aby při tom stejný úděl potkal i vás. Není vyloučeno vítězství vyčerpáním protivníka či využití okolních předmětů a znalosti prostředí (např. lstivým vlákáním protivníka do bažiny).
 
-Tato absolutní svoboda však může být omezena morálními zásadami účastníků či předem dohodnutými pravidly souboje. Velmi zde záleží na okolnostech, při kterých k boji dochází:
+Tato absolutní svoboda však může být omezena morálními zásadami účastníků\cite{HistoryOfSurrender} či předem dohodnutými pravidly souboje. Velmi zde záleží na okolnostech, při kterých k boji dochází:
 \begin{itemize}
     \item Např. při obraně domácnosti před vetřelcem platí popis výše
     \item Voják v bitvě koná v mezích, jež mu stanovuje vojenská disciplína a rozkazy velitele
@@ -32,16 +32,29 @@ Tato absolutní svoboda však může být omezena morálními zásadami účastn
     \item Ve cvičném souboji si účastníci logicky dávají pozor, aby jeden druhého zbytečně nezabil či nezmrzačil
     \item V duelu na obranu cti se účastníci mohli předem dohodnout, že nechtějí jeden druhého zabít, a např. bojovat "na první krev"
 \end{itemize}
-Mezi znaky zkušeného šermíře patří schopnost být si vědom těchto mantinelů, a v jejich rámci jednat kreativním a účinným způsobem.
+Mezi znaky zkušeného šermíře patří schopnost být si vědom těchto mantinelů a v jejich rámci jednat kreativním a účinným způsobem.
 
-Extrémní případ těchto omezení vidíme v moderních šermířských komunitách. U těch najdeme velmi striktní pravidla a vysoké minimální nároky na bojovou výstroj s cílem zamezit jakýmkoliv vážným zraněním a ztrátám na životech, jelikož ty přirozeně nejsou cílem jejich snažení. 
+Extrémní případ těchto omezení vidíme v moderních šermířských komunitách. U těch najdeme velmi striktní pravidla a vysoké nároky na bojovou výstroj s cílem zamezit jakýmkoliv vážným zraněním a ztrátám na životech, jelikož ty přirozeně nejsou cílem jejich snažení. 
 
 Avšak pokud nedochází k žádným reálným zraněním, jak lze určit, kdo vyhrál? Zjevnou cestou je například systém zásahových zón a počítání životů, které se bojovníkovi v závislosti na zasažené zóně odečítají. Takový systém však nezaručuje realistický dojem z boje. Mezi plody snah o realističtější zážitek patří např. v české LARPové scéně oblíbený šatrh\cite{Satrh}, založený na důvěře v účastníky, že podle způsobu, jakým byli zasaženi, odhadnou a zahrají realistickou reakci, či buhurt, kde zkrátka vítězí ten, kdo nepadne vyčerpáním. Je tedy vidět, že i komunity, jejichž nejvyšší prioritou při boji je záruka bezpečí, jsou ochotné vyvinout značnou snahu, aby byl zážitek z boje realistický.
 
 \subsection{Boj jeden na jednoho}
+Jak tedy probíhá duel mezi dvěma šermíři? Hloubkový rozbor zohledňující historické i moderní techniky, rozdílné úrovně zkušenosti, zdatnosti a motivace obou zápasníků, veškeré obvyklé zbraně, kterými by mohli být vybaveni, prostředí a vnější okolnosti, které v souboji mohou hrát podstatnou roli, není možné provést v rozsahu bakalářské práce, natož jedné její kapitoly. Pro ten tedy čtenáře odkáži na specializovanou literaturu \cite{MedievalArmorAndArmorCombat}\cite{MedievalArmsArmorAndTactics}\cite{MedievalMilitaryTechnology}\cite{HistoryOfSurrender}.
 
+Zde si zběžně nastíníme pár faktorů, které při souboji hrají důležitou roli.
+
+\textbf{Obratnost zbraně} - 
+
+\textbf{Dosah, pohyb, terén}
+
+\textbf{Zbroj, únava}
+
+\textbf{Předvídání protivníka}
 
 \subsection{Hromadný boj a boj proti přesile}
+Souboj jeden na jednoho však může vypadat jako téměř laboratorní podmínky v porovnání s chaotickými situacemi, v rámci kterých v historii běžně k boji docházelo.   
+
+Často se střetávaly větší, více či méně \textbf{organizované skupiny}, případně celé armády čítající mnoho takových pevně ustanovených jednotek. V takové situaci je vhodné, aby bojovníkova individualita ustoupila do pozadí, rozhodujícím faktorem je taktické jednání a sladěnost celku. 
 
 
 \section{Chladná zbraň ve videohrách}
