--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -30,7 +30,7 @@
 
 
 @article{AustralopithecusWeapon,
-  author          = {Eli C. Minkoff},
+  author          = {Minkoff, Eli C.},
   journal         = {Journal of Paleontology},
   number          = {no. 6},
   title           = {A fossil baboon from Angola, with a note on Australopithecus},
@@ -40,9 +40,42 @@
 }
 
 @article{Satrh,
-  author          = {Tomáš "Vojcl" Vojáček},
+  author          = {Vojáček, Tomáš "Vojcl"},
   journal         = {Larp.cz},
   title           = {Odkud přišly a kam jdou tvrdší bitvy},
   year            = {2012},
   url             = {https://www.larp.cz/?q=cs/clanek/3545/odkud-prisly-a-kam-jdou-tvrdsi-bitvy},
+}
+
+@book{MedievalMilitaryTechnology,
+  author         = {DeVries, Kelly and Smith, Robert Douglas},
+  editor         = {},
+  publisher      = {University Of Toronto Press Incorporated},
+  title          = {Medieval Military Technology, 2nd edition},
+  year           = {2012},
+  url            = {https://books.google.cz/books?id=KO6Xxn7tsl4C&lpg=PR11&ots=xnAuTG1YEx&dq=medieval%20armor&lr&hl=cs&pg=PP1#v=onepage&q=medieval%20armor&f=false},
+}
+@book{HistoryOfSurrender,
+  author         = {},
+  editor         = {Afflerbach, Holger and Strachan, Hew},
+  publisher      = {Oxford University Press},
+  title          = {How Fighting Ends - A History of Surrender},
+  year           = {2012},
+  url            = {https://books.google.cz/books?id=gh6VIodYxNMC&lpg=PP1&ots=of_wjtnJNo&dq=historic%20fighting&lr&hl=cs&pg=PR4#v=onepage&q=historic%20fighting&f=false},
+}
+
+@phdthesis{MedievalArmorAndArmorCombat,
+  author      = {Heller, Jason and Rosborough, Tom and Vogel, Brandon and Ruscak, Ian and Longabucco, Jonathan },
+  school      = {Worcester Polytechnic Institute},
+  title       = {Medieval Armor and Armored Combat},
+  year        = {2005},
+  url         = {https://digital.wpi.edu/downloads/x059c7817},
+}
+
+@phdthesis{MedievalArmsArmorAndTactics,
+  author      = {Waddell, Jack and Palermo, Brent},
+  school      = {Worcester Polytechnic Institute},
+  title       = {Medieval Arms, Armor and Tactics},
+  year        = {2002},
+  url         = {http://baptor.free.fr/Forge/Medieval%20Arms%20Armor%20and%20Tactics.pdf},
 }
