--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -5,16 +5,16 @@ V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - ve
 \section{Chladná zbraň v reálném světě}
 \subsection{Průlet historií}
 
-Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako lidstvo samo. Archelogické nálezy nasvědčují, že již vzdálený předek moderního člověka Australopithecus používal úderný předmět (pravděpodobně kus dřeva či kost ulovené antilopy) jako nástroj k lovu paviánů \cite{AustralopithecusWeapon}. Výhody, které mu to mohlo přinést, jsou zjevné: zatímco kořist měla možnosti obrany omezené tím, kam dosáhly její vlastní zuby a drápy, lovec si ji mohl držet v bezpečné vzdálenosti a vystavovat vlastní tělo o poznání menšímu nebezpečí odvety.
+Není nadsázkou když prohlásíme, že chladná zbraň je koncept starý jako lidstvo samo. Archelogické nálezy nasvědčují, že již vzdálený předek moderního člověka Australopithecus používal úderný předmět (pravděpodobně kus dřeva či kost ulovené antilopy) jako \textbf{nástroj k lovu} paviánů \cite{AustralopithecusWeapon}. \textbf{Výhody}, které mu to mohlo přinést, jsou zjevné: zatímco kořist měla možnosti obrany omezené tím, kam dosáhly její vlastní zuby a drápy, lovec si ji mohl držet v bezpečné vzdálenosti a vystavovat vlastní tělo o poznání menšímu nebezpečí odvety.
 
-V průběhu svého vývoje lidský rod zdokonaloval i své zbraně, což přineslo mnoho dalších implikací - ostrý kamenný hrot člověku umožnil zasazovat ránu spolehlivě, a hlubší, než by kdy umožnilo pouhé jeho tělo. Spolehlivost zbraně umožnila lepší koordinaci mezi lovci. Sofistikovaná koordinace člověku otevřela cestu k lovu větších a silnějších druhů zvěře. Nakonec se člověk propracoval na samý vrchol potravního řetězce a zbraň, nástroj lovu, sloužila stále více pro vzájemný boj mezi lidmi. 
+V průběhu svého vývoje lidský rod zdokonaloval i své zbraně, což přineslo mnoho dalších implikací - ostrý kamenný hrot člověku umožnil zasazovat ránu spolehlivě, a hlubší, než by kdy umožnilo pouhé jeho tělo. Spolehlivost zbraně umožnila lepší \textbf{koordinaci mezi lovci}. Sofistikovaná koordinace člověku otevřela cestu k lovu větších a silnějších druhů zvěře. Nakonec se člověk propracoval na samý vrchol potravního řetězce a zbraň, nástroj lovu, sloužila stále více pro vzájemný \textbf{boj mezi lidmi}. 
 
-Zrod civilizací vznesl na zbraň nové požadavky. Vysoká koncentrace lidí na jednom místě vedla přirozeně ke specializaci profesí, mezi jinými i vojenské. Profesionální armáda čítající tisíce lidí umožňovala (a vyžadovala) do té doby nevídanou míru koordinace - ideálem v takové situaci se ukázalo disponovat širokou škálou zbraní vysoce specializovaných, chladných i střelných, jež mohly být použity ve vzájemné synergii, doplněné válečnými stroji a vhodně vycvičenými zvířaty\footnote{kůň jak známo hrál přední roli}. Profesionální voják měl čas a motivaci svůj typ zbraně pochopit do hloubky, stejně tak vysoce náročná si mohla dovolit být i její výroba a údržba, za níž nesli zodpovědnost rovněž profesionálové ve svém oboru. 
-Na druhé straně tu však byl běžný obyvatel, který nepatřil k pravidelnému vojenskému jádru, ale byla-li říše pod útokem, považovalo se za samozřejmost, že pozvedne zbraň na její obranu. Zbraň pro takového člověka vyžadovala především jednoduchost - jak na výrobu, tak na údržbu a použití, zkrátka aby bylo možné v časové tísni krizové situace dostat co nejrychleji co nejvíce odvedenců do bojeschopného stavu a udržet je v něm.
+Zrod civilizací vznesl na zbraň nové požadavky. Vysoká koncentrace lidí na jednom místě vedla přirozeně ke specializaci profesí, mezi jinými i vojenské. \textbf{Profesionální armáda} čítající tisíce lidí umožňovala (a vyžadovala) do té doby nevídanou míru koordinace - ideálem v takové situaci se ukázalo disponovat širokou škálou zbraní vysoce specializovaných, chladných i střelných, jež mohly být použity ve vzájemné synergii, doplněné válečnými stroji a vhodně vycvičenými zvířaty\footnote{kůň jak známo hrál přední roli}. Profesionální voják měl čas a motivaci svůj typ zbraně pochopit do hloubky, stejně tak vysoce náročná si mohla dovolit být i její výroba a údržba, za níž nesli zodpovědnost rovněž profesionálové ve svém oboru. 
+Na druhé straně tu však byl \textbf{běžný obyvatel}, který nepatřil k pravidelnému vojenskému jádru, ale byla-li říše pod útokem, považovalo se za samozřejmost, že pozvedne zbraň na její obranu. Zbraň pro takového člověka vyžadovala především jednoduchost - jak na výrobu, tak na údržbu a použití, zkrátka aby bylo možné v časové tísni krizové situace dostat co nejrychleji co nejvíce odvedenců do bojeschopného stavu a udržet je v něm.
 
-Mocenské soupeření států ústí ve zběsilý a nikdy nekončící závod ve vývoji účinnějších zbraní a metod jejich použití. V jednom okamžiku dominuje Blízkému východu vozataj, v následujícím jej poráží Makedonská falanga, nad ní předvede svou superioritu Římský systém manipulů, ten vzápětí Římané sami prohlašují za zastaralý, avšak o půl tisíciletí později stejně jejich říši rozvrací hordy Hunských jezdců... chladná zbraň, ať už v rukou jezdce či pěšího vojáka, zůstává po většinu dějin dominantním prvkem na bojišti, se střelnými zbraněmi hrajícími významnou podpůrnou roli. Až s rozmachem zbraní palných se tato dynamika obrací a velmi pozvolně se dobíráme k modernímu vojenství. V současné době se chladná zbraň považuje převážně za překonanou - uplatnění pro ní stále existuje např. v kontextu pořádkových složek, avšak i pro ty plní úlohu spíše doplňkovou. Mimo oficiální kruhy pořád hraje nezanedbatelnou roli, avšak to je především pro její triviální dostupnost v porovnání s palnou zbraní.
+Mocenské soupeření států ústí ve zběsilý a nikdy nekončící \textbf{závod ve vývoji účinnějších zbraní a metod jejich použití}. V jednom okamžiku dominuje Blízkému východu vozataj, v následujícím jej poráží Makedonská falanga, nad ní předvede svou superioritu Římský systém manipulů, ten vzápětí Římané sami prohlašují za zastaralý, avšak o půl tisíciletí později stejně jejich říši rozvrací hordy Hunských jezdců... chladná zbraň, ať už v rukou jezdce či pěšího vojáka, zůstává po většinu dějin dominantním prvkem na bojišti, se střelnými zbraněmi hrajícími významnou podpůrnou roli. Až s rozmachem zbraní palných se tato dynamika obrací a velmi pozvolně se dobíráme k modernímu vojenství. V současné době se chladná zbraň považuje převážně za překonanou - uplatnění pro ní stále existuje např. v kontextu pořádkových složek, avšak i pro ty plní úlohu spíše doplňkovou. Mimo oficiální kruhy pořád hraje nezanedbatelnou roli, avšak to je především pro její \textbf{triviální dostupnost} v porovnání s palnou zbraní.
 
-Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění Kendó ("cesta meče") vycházející ze samurajské tradice, či evropská komunita historického šermu, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní sportovní šerm, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén LARP\footnote{\ac{LARP}}, jehož jedna z podob - tzv. "dřevárna" - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
+Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění \textbf{Kendó} ("cesta meče") vycházející ze samurajské tradice, či evropská komunita \textbf{historického šermu}, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní \textbf{sportovní šerm}, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén \textbf{LARP}\footnote{\ac{LARP}}, jehož jedna z podob - tzv. "dřevárna" - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla boje přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
 
 Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní jejich oblíbenou činnost napodobit, ale bez mnohých nepohodlí, jež ji provázejí v reálném světě. Pro hráče, který s bojem v reálném světě žádnou zkušenost nemá, může zase videohra být cestou, jak tuto mezeru ve svých zkušenostech částečně zaplnit a získat například hlubší porozumění k historii.
 
@@ -22,21 +22,21 @@ Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze oček
 Nyní si představíme typický průběh boje vedeného s chladnými zbraněmi, a vypíchneme na něm znaky, které by videohra měla dokázat vystihnout, pokud se pokouší o realistický bojový systém.
 \bigbreak
 
-Cílem souboje je v nejjednodušším případě protivníka zabít, vážně zranit či ho jinak vyřadit z bojeschopného stavu, čehož může být dosaženo libovolnými prostředky, a ideálně zabránit, aby při tom stejný úděl potkal i vás. Není vyloučeno vítězství vyčerpáním protivníka či využití okolních předmětů a znalosti prostředí (např. lstivým vlákáním protivníka do bažiny).
+Cílem souboje je v nejjednodušším případě protivníka \textbf{zabít, vážně zranit či ho jinak vyřadit z bojeschopného stavu}, čehož může být dosaženo libovolnými prostředky, a ideálně zabránit, aby při tom stejný úděl potkal i vás. Není vyloučeno vítězství vyčerpáním protivníka či využití okolních předmětů a znalosti prostředí (např. lstivým vlákáním protivníka do bažiny).
 
-Tato absolutní svoboda však může být omezena morálními zásadami účastníků\cite{HistoryOfSurrender} či předem dohodnutými pravidly souboje. Velmi zde záleží na okolnostech, při kterých k boji dochází:
+Tato absolutní svoboda však může být omezena morálními zásadami účastníků\cite{HistoryOfSurrender} či předem dohodnutými pravidly souboje. Velmi zde záleží na \textbf{okolnostech}, při kterých k boji dochází:
 \begin{itemize}
-    \item Např. při obraně domácnosti před vetřelcem platí popis výše
-    \item Voják v bitvě koná v mezích, jež mu stanovuje vojenská disciplína a rozkazy velitele
-    \item Účastník turnaje přirozeně nesmí opustit vyhrazené bojiště či využívat pomoci z publika
-    \item Ve cvičném souboji si účastníci logicky dávají pozor, aby jeden druhého zbytečně nezabil či nezmrzačil
-    \item V duelu na obranu cti se účastníci mohli předem dohodnout, že nechtějí jeden druhého zabít, a např. bojovat "na první krev"
+    \item Např. při \textbf{obraně domácnosti} před vetřelcem platí popis výše
+    \item \textbf{Voják v bitvě} koná v mezích, jež mu stanovuje vojenská disciplína a rozkazy velitele
+    \item \textbf{Účastník turnaje} přirozeně nesmí opustit vyhrazené bojiště či využívat pomoci z publika
+    \item Ve \textbf{cvičném souboji} si účastníci logicky dávají pozor, aby jeden druhého zbytečně nezabil či nezmrzačil
+    \item V duelu na obranu cti se účastníci mohli \textbf{předem dohodnout}, že nechtějí jeden druhého zabít, a např. bojovat "na první krev"
 \end{itemize}
 Mezi znaky zkušeného šermíře patří schopnost být si vědom těchto mantinelů a v jejich rámci jednat kreativním a účinným způsobem.
 
-Extrémní případ těchto omezení vidíme v moderních šermířských komunitách. U těch najdeme velmi striktní pravidla a vysoké nároky na bojovou výstroj s cílem zamezit jakýmkoliv vážným zraněním a ztrátám na životech, jelikož ty přirozeně nejsou cílem jejich snažení. 
+Extrémní případ těchto omezení vidíme v moderních šermířských komunitách. U těch najdeme velmi \textbf{striktní pravidla} a vysoké nároky na bojovou výstroj s cílem zamezit jakýmkoliv vážným zraněním a ztrátám na životech, jelikož ty přirozeně nejsou cílem jejich snažení. 
 
-Avšak pokud nedochází k žádným reálným zraněním, jak lze určit, kdo vyhrál? Zjevnou cestou je například systém zásahových zón a počítání životů, které se bojovníkovi v závislosti na zasažené zóně odečítají. Takový systém však nezaručuje realistický dojem z boje. Mezi plody snah o realističtější zážitek patří např. v české LARPové scéně oblíbený šatrh\cite{Satrh}, založený na důvěře v účastníky, že podle způsobu, jakým byli zasaženi, odhadnou a zahrají realistickou reakci, či buhurt, kde zkrátka vítězí ten, kdo nepadne vyčerpáním. Je tedy vidět, že i komunity, jejichž nejvyšší prioritou při boji je záruka bezpečí, jsou ochotné vyvinout značnou snahu, aby byl zážitek z boje realistický.
+Avšak pokud nedochází k žádným reálným zraněním, \textbf{jak lze určit, kdo vyhrál?} Zjevnou cestou je například systém zásahových zón a počítání životů, které se bojovníkovi v závislosti na zasažené zóně odečítají. Takový systém však nezaručuje realistický dojem z boje. Mezi plody snah o realističtější zážitek patří např. v české LARPové scéně oblíbený šatrh\cite{Satrh}, založený na důvěře v účastníky, že podle způsobu, jakým byli zasaženi, odhadnou a zahrají realistickou reakci, či buhurt, kde zkrátka vítězí ten, kdo nepadne vyčerpáním. Je tedy vidět, že i komunity, jejichž nejvyšší prioritou při boji je záruka bezpečí, jsou ochotné vyvinout značnou snahu, aby byl zážitek z boje realistický.
 
 \subsection{Boj jeden na jednoho}
 Jak tedy probíhá duel mezi dvěma šermíři? Hloubkový rozbor zohledňující historické i moderní techniky, rozdílné úrovně zkušenosti, zdatnosti a motivace obou zápasníků, veškeré obvyklé zbraně, kterými by mohli být vybaveni, prostředí a vnější okolnosti, které v souboji mohou hrát podstatnou roli, není možné provést v rozsahu bakalářské práce, natož jedné její kapitoly. Pro ten tedy čtenáře odkáži na specializovanou literaturu \cite{MedievalArmorAndArmorCombat}\cite{MedievalArmsArmorAndTactics}\cite{MedievalMilitaryTechnology}\cite{HistoryOfSurrender}.
@@ -54,7 +54,11 @@ Zde si zběžně nastíníme pár faktorů, které při souboji hrají důležit
 \subsection{Hromadný boj a boj proti přesile}
 Souboj jeden na jednoho však může vypadat jako téměř laboratorní podmínky v porovnání s chaotickými situacemi, v rámci kterých v historii běžně k boji docházelo.   
 
-Často se střetávaly větší, více či méně \textbf{organizované skupiny}, případně celé armády čítající mnoho takových pevně ustanovených jednotek. V takové situaci je vhodné, aby bojovníkova individualita ustoupila do pozadí, rozhodujícím faktorem je taktické jednání a sladěnost celku. 
+Často se střetávaly větší, více či méně \textbf{organizované skupiny}, případně celé armády čítající mnoho takových pevně ustanovených jednotek. V takové situaci je na místě, aby bojovníkova individualita ustoupila do pozadí - rozhodujícím faktorem je až na výjimky taktické jednání a sladěnost celku. 
+
+Jedním ze základních požadavků, které jsou na vojáka kladeny, je schopnost \textbf{držení formace}. Stojíte-li jako semknutá řada, štít na štít, meče připravené opětovat jakýkoliv úder, který by protivník zkusil na kamaráda vedle, je mnohem těžší prorazit vašimi řadami a dostat se k lučištníkům, kteří nepříteli způsobují těžké ztráty. 
+
+\textbf{Komunikace} mezi velením a vojskem je dalším faktorem
 
 
 \section{Chladná zbraň ve videohrách}
